Add keywords to composer.json

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "name": "ddeboer/vatin",
     "description": "Validate VAT identification numbers",
+    "keywords": [ "vat", "tax", "btw" ],
     "authors": [
         {
             "name": "David de Boer",
