--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -6,4 +6,10 @@
             <directory suffix="Test.php">./tests/</directory>
         </testsuite>
     </testsuites>
+
+    <filter>
+        <whitelist>
+            <directory suffix=".php">./src</directory>
+        </whitelist>
+    </filter>
 </phpunit>
