--- a/composer.json
+++ b/composer.json
@@ -11,9 +11,11 @@
         }
     ],
     "require": {
-        "php": ">=5.3.0",
-        "ext-soap": "*"
+        "php": ">=5.3.0"
     },
+    "suggest": {
+        "ext-soap": "Required if you want to check the VAT number via VIES"
+    }
     "autoload": {
         "psr-0": {
             "Ddeboer\\Vatin": "src"
