--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,9 @@
     "require": {
         "php": ">=5.3.0"
     },
+    "suggest": {
+        "ext-soap": "Required if you want to check the VAT number via VIES"
+    },
     "autoload": {
         "psr-0": {
             "Ddeboer\\Vatin": "src"
