--- a/composer.json
+++ b/composer.json
@@ -8,17 +8,29 @@
             "name": "David de Boer",
             "email": "david@ddeboer.nl",
             "homepage": "https://github.com/ddeboer"
+        },
+        {
+            "name": "Community contributions",
+            "homepage": "https://github.com/ddeboer/vatin/contributors"
         }
     ],
     "require": {
         "php": ">=5.3.0"
     },
+    "require-dev": {
+        "ext-soap": "*"
+    },
     "suggest": {
         "ext-soap": "Required if you want to check the VAT number via VIES"
     },
     "autoload": {
-        "psr-0": {
-            "Ddeboer\\Vatin": "src"
+        "psr-4": {
+            "Ddeboer\\Vatin\\": "src/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Ddeboer\\Vatin\\Test\\": "tests/"
         }
     }
 }
