--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "php": ">=5.3.0"
     },
     "require-dev": {
-        "ext-soap": "*"
+        "ext-soap": "*",
+        "phpunit/phpunit": "^5.7"
     },
     "suggest": {
         "ext-soap": "Required if you want to check the VAT number via VIES"
