--- a/composer.json
+++ b/composer.json
@@ -15,11 +15,11 @@
         }
     ],
     "require": {
-        "php": ">=5.6.0"
+        "php": "^7.2 || ^8.0"
     },
     "require-dev": {
         "ext-soap": "*",
-        "phpunit/phpunit": "^5.7 || ^6.5"
+        "phpunit/phpunit": "^8.5.21 || ^9.5"
     },
     "suggest": {
         "ext-soap": "Required if you want to check the VAT number via VIES"
