--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,6 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<phpunit xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         bootstrap="vendor/autoload.php"
+         colors="true"
+         convertErrorsToExceptions="true"
+         convertNoticesToExceptions="true"
+         convertWarningsToExceptions="true"
+         xsi:noNamespaceSchemaLocation="https://schema.phpunit.de/9.3/phpunit.xsd">
+    <coverage>
+        <include>
+            <directory suffix=".php">./src</directory>
+        </include>
+    </coverage>
 
-<phpunit bootstrap="vendor/autoload.php" colors="true">
     <testsuites>
         <testsuite name="Ddeboer Vatin Test Suite">
             <directory suffix="Test.php">./tests/</directory>
